deploy github action

--- a/.github/workflows/deploy-jenkins.yml
+++ b/.github/workflows/deploy-jenkins.yml
@@ -25,6 +25,11 @@ jobs:
       - name: Set up gcloud CLI
         uses: google-github-actions/setup-gcloud@v1
 
+      - name: Install GKE Auth Plugin
+        run: |
+          gcloud components install gke-gcloud-auth-plugin
+          echo "export USE_GKE_GCLOUD_AUTH_PLUGIN=True" >> $GITHUB_ENV
+
       - name: Configure kubectl
         run: |
           gcloud container clusters get-credentials cluster-gke-first --region=us-central1
