--- a/k8s-jenkins/jenkins-deployment.yaml
+++ b/k8s-jenkins/jenkins-deployment.yaml
@@ -13,8 +13,8 @@ spec:
         app: jenkins
     spec:
       securityContext:
-        fsGroup: 1000  # 💡 Asegura que el grupo de Jenkins tenga permisos en el volumen
-
+        fsGroup: 1000 
+        
       initContainers:
         - name: volume-permissions
           image: busybox
@@ -27,8 +27,7 @@ spec:
         - name: jenkins
           image: jenkins/jenkins:lts
           securityContext:
-            runAsUser: 1000  # 💡 Ejecutar Jenkins con el usuario correcto
-            fsGroup: 1000
+            runAsUser: 1000
           ports:
             - containerPort: 8080
           volumeMounts:
