--- a/k8s-jenkins/jenkins-service.yaml
+++ b/k8s-jenkins/jenkins-service.yaml
@@ -4,6 +4,7 @@ metadata:
   name: jenkins-service
 spec:
   type: LoadBalancer
+  loadBalancerIP: jenkins-ip
   ports:
     - port: 80
       targetPort: 8080
