--- a/.github/workflows/deploy-jenkins.yml
+++ b/.github/workflows/deploy-jenkins.yml
@@ -37,5 +37,7 @@ jobs:
 
       - name: Deploy Jenkins to GKE
         run: |
-          kubectl apply -f k8s-jenkins/
+          kubectl apply -f k8s-jenkins/volumes/
+          kubectl apply -f k8s-jenkins/services/
+          kubectl apply -f k8s-jenkins/deployments/
           kubectl rollout status deployment/jenkins
