--- a/k8s-jenkins/jenkins-ingress.yaml
+++ b/k8s-jenkins/jenkins-ingress.yaml
@@ -2,6 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: jenkins-ingress
+  namespace: dev
   annotations:
     kubernetes.io/ingress.global-static-ip-name: "jenkins-ingress-ip"
     kubernetes.io/ingress.class: "nginx"
